--- a/Chiropractic/V2Templates/game/game_start.html
+++ b/Chiropractic/V2Templates/game/game_start.html
@@ -1,5 +1,5 @@
 ﻿<div>
     <h1> {{story.name}}</h1>
     <h3>{{story.summary}}</h3>
-    <button ui-sref="game.step">Start</button>
+    <button ng-click="start()">Start</button>
 </div>
